[B]0.8.0[/B]
- [MODIFIED] Default background revised to something a bit more lively
- [MODIFIED] Addons view revised to grid-based layout
- [MODIFIED] DialogYesNo.xml button order reversed (thanks MoneyMaker)
- [NEW] File manager
- [NEW] Media Filter (video)
- Various skinwide tweaks

[B]0.7.0[/B]
- [NEW] Hide watched flag in video section (side menu toggle)
- [NEW] Global search (split across video and music)
- [NEW] Favourites browser
- [NEW] User profiles
- [MODIFIED] Home screen layout tweaked
- [MODIFIED] Hidden side menu revised
- [FIXED] Incorrect letter cases 'musicViewType' amongst a couple of others (thanks Wishie)
- [FIXED] Footer information sometimes being shown incorrectly (myVideoNav, myMusicNav) Thanks Wishie.
- [FIXED] Global background not working in music file lists
- [MODIFIED] Item information in music section now handles albums and artists more appropriately.
- [MODIFIED] Global background systems reworked and simplified. Skin now defaults to hard coded background. User can override this with a static image, or use a fanart slideshow (assuming fanart paths are set).
- [REMOVED] Animated fanart slides, except in video / music info screens. 
- [DIALOG ADDED] DialogSlider.xml (supports zoom setting in video settings)
- [DIALOG ADDED] DialogPVRGroupManager.xml
- Various skinwide nips, tucks and tweaks.


[B]0.6.0[/B]
- 5 day weather screen added (press down on homescreen). Layout not finalised.
- New skin option: Set and use a custom global background
- Various skin-wide tweaks and fixes
- Music addons and file lists reworked. Should now work properly!
- Dialog 'DialogPVRTimerSettings.xml' added.
- Dialog 'DialogPVRChannelManager.xml' added.
- PVR Timer view implemented (first pass - not fully tested)
- Music player pause issue fixed (thanks lonjemoco!)

[B]0.5.0[/B]
- Photo library: basic / limited functionality implemented. Accessed from homescreen.