@@ -1,11 +1,6 @@
 <window>
-	<defaultcontrol always="true">10</defaultcontrol>
-	<coordinates>
-		<system>1</system>
-		<posx>0</posx>
-		<posy>0</posy>
-	</coordinates>
-	
+	<defaultcontrol always="true">8000</defaultcontrol>
+		
 	<controls>
 				
 		<!--background-->
@@ -28,55 +23,164 @@
 		</control>
 		
 		<control type="group">
-			<posx>col-9-begin</posx>
-			<posy>row-4-begin</posy>
-			
+						
 			<include>modalDialogInOutVertical</include>
-											
-			<!--channel / duration-->
-			<control type="label">
-				<description>Channel name</description>
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>8-col</width>
-				<font>itemTitleSmall</font>
-				<label>$INFO[ListItem.channelname]</label>
+			
+			<!--thumbnail if available-->
+			<control type="group">
+				<posx>col-7-begin</posx>
+				<posy>row-2-begin</posy>
+
+				<!--cover-->			
+				<control type="image">
+					<posx>0</posx>
+					<posy>-12</posy>
+					<width>12-col</width>
+					<height>486</height>
+					<aspectratio scalediffuse="false">scale</aspectratio>
+					<texture background="true" fallback="colors/black.png" border="0">$INFO[Listitem.thumb]</texture>
+					<fadetime>200</fadetime>
+				</control>
+
 			</control>
 			
-			<!--title-->
-			<control type="label">
-				<description>Programme title</description>
-				<posx>0</posx>
-				<posy>1-row</posy>
-				<width>8-col</width>
-				<align>left</align>
-				<font>regularStrong</font>
-				<textcolor>selected</textcolor>
-				<label>$INFO[ListItem.Title]</label>
-			</control>
+			<!--content-->
+			<control type="group">
+				<posx>col-7-begin</posx>
+				<posy>row-11-begin</posy>
 			
-			<control type="label">
-				<description>Channel name</description>
-				<posx>0</posx>
-				<posy>2-row</posy>
-				<width>8-col</width>
-				<font>itemTitleSmall</font>
-				<label>$INFO[ListItem.startdate] • $INFO[ListItem.duration]</label>
+				<!--titles-->
+				<control type="label">
+					<posx>0</posx>
+					<posy>0</posy>
+					<width>12-col</width>
+					<align>left</align>
+					<font>itemTitleSmall</font>
+					<textcolor>selected</textcolor>
+					<label>$INFO[listitem.channelname,, • ]$INFO[ListItem.startdate] • $INFO[ListItem.duration]</label>
+				</control>
+				
+				<control type="label">
+					<description>Episode title</description>
+					<posx>0</posx>
+					<posy>1-row</posy>
+					<width>12-col</width>
+					<align>left</align>
+					<font>medium</font>
+					<textcolor>selected</textcolor>
+					<label>$INFO[ListItem.Label]</label>
+				</control>
+								
+				<!--synopsis-->			
+				<control type="textbox">
+					<posx>0</posx>
+					<posy>120</posy>
+					<font>small</font>
+					<width>12-col</width>
+					<align>left</align>
+					<textcolor>selected</textcolor>
+					<height>174</height>
+					<label>[B]$INFO[ListItem.plot][/B]</label>
+					<autoscroll delay="10000" time="1000" repeat="10000"></autoscroll>
+				</control>
+				
+				<!--dialog controls-->						
+				<control type="list" id="8000">
+					<posx>0</posx>
+					<posy>330</posy>
+					<width>12-col</width>
+					<height>1-row</height>
+					<itemgap>3</itemgap>
+					<orientation>horizontal</orientation>
+
+					<itemlayout width="6-col" height="1-row">
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<height>53</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/black.png</texture>
+						</control>
+
+						<control type="label">
+							<posx>24</posx>
+							<posy>0</posy>
+							<width>1-col</width>
+							<font>symbol</font>
+							<textcolor>selected</textcolor>
+							<label>$INFO[ListItem.label2]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+						<control type="label">
+							<posx>1-col</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<font>menuTitle</font>
+							<textcolor>selected</textcolor>
+							<label>$INFO[ListItem.label]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+					</itemlayout>
+
+					<focusedlayout width="6-col" height="1-row">
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<height>53</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/selected.png</texture>
+						</control>
+
+						<control type="label">
+							<posx>24</posx>
+							<posy>0</posy>
+							<width>1-col</width>
+							<font>symbol</font>
+							<textcolor>black</textcolor>
+							<label>$INFO[ListItem.label2]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+						<control type="label">
+							<posx>1-col</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<font>menuTitle</font>
+							<textcolor>black</textcolor>
+							<label>$INFO[ListItem.label]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+					</focusedlayout>
+
+					<content>
+						<item id="1">
+							<label>31075</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>sendclick(2003,10)</onclick>
+						</item>
+					</content>
+
+				</control>
+				
 			</control>
+																				
+		</control>
+		
+		<!--buttons-->
+		<control type="group">
+			<visible>false</visible>
 			
-			<!--synopsis-->			
-			<control type="textbox">
-				<posx>0</posx>
-				<posy>178</posy>
-				<font>small</font>
-				<width>8-col</width>
-				<align>left</align>
-				<textcolor>selected</textcolor>
-				<height>340</height>
-				<label>$INFO[ListItem.plot]</label>
-				<autoscroll delay="10000" time="1000" repeat="10000"></autoscroll>
+			<control type="button" id="10">
+				<description>Play</description>
 			</control>
-									
 		</control>
 	
 		<!--debugging-->
