@@ -247,7 +247,7 @@
 						<posy>45</posy>
 						<width>24-col</width>
 						<font>regular</font>
-						<label>$INFO[container.Numitems,, $LOCALIZE[31014]]</label>
+						<label>$INFO[container.Numitems,, $LOCALIZE[31014]] </label>
 						<textcolor>selected</textcolor>
 					</control>
 
@@ -379,7 +379,7 @@
 								<effect type="fade" start="100" end="0" time="300" />
 							</animation>
 
-							<itemlayout width="387" height="354">
+							<itemlayout width="387" height="362">
 
 								<control type="image">
 									<posx>0</posx>
@@ -438,7 +438,7 @@
 
 							</itemlayout>
 
-							<focusedlayout width="387" height="354">
+							<focusedlayout width="387" height="362">
 
 								<control type="image">
 									<posx>0</posx>
@@ -503,62 +503,63 @@
 
 							<content>
 								<item id="1">
-									<label>$INFO[Window(Home).Property(LatestMovie.1.Title)]</label>
-									<label2>$INFO[Window(Home).Property(LatestMovie.1.Year),, •] $INFO[Window(Home).Property(LatestMovie.1.Runningtime),, mins]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestMovie.1.fanart)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestMovie.1.Path)])</onclick>
+									<label>$INFO[Window(Home).Property(RecentMovie.1.Title)]</label>
+									<label2>$INFO[Window(Home).Property(RecentMovie.1.Year),, •] $INFO[Window(Home).Property(RecentMovie.1.Runtime),, mins]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentMovie.1.art(fanart))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentMovie.1.Play)]</onclick>
 								</item>
 								<item id="2">
-									<visible>!isempty(Window(Home).Property(LatestMovie.2.Title))</visible>
-									<label>$INFO[Window(Home).Property(LatestMovie.2.Title)]</label>
-									<label2>$INFO[Window(Home).Property(LatestMovie.2.Year),, •] $INFO[Window(Home).Property(LatestMovie.2.Runningtime),, mins]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestMovie.2.fanart)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestMovie.2.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentMovie.2.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentMovie.2.Title)]</label>
+									<label2>$INFO[Window(Home).Property(RecentMovie.2.Year),, •] $INFO[Window(Home).Property(RecentMovie.2.Runtime),, mins]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentMovie.2.art(fanart))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentMovie.1.Play)]</onclick>
 								</item>
 								<item id="3">
-									<visible>!isempty(Window(Home).Property(LatestMovie.3.Title))</visible>
-									<label>$INFO[Window(Home).Property(LatestMovie.3.Title)]</label>
-									<label2>$INFO[Window(Home).Property(LatestMovie.3.Year),, •] $INFO[Window(Home).Property(LatestMovie.3.Runningtime),, mins]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestMovie.3.fanart)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestMovie.3.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentMovie.3.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentMovie.3.Title)]</label>
+									<label2>$INFO[Window(Home).Property(RecentMovie.3.Year),, •] $INFO[Window(Home).Property(RecentMovie.3.Runtime),, mins]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentMovie.3.art(fanart))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentMovie.1.Play)]</onclick>
 								</item>
 								<item id="4">
-									<visible>!isempty(Window(Home).Property(LatestMovie.4.Title))</visible>
-									<label>$INFO[Window(Home).Property(LatestMovie.4.Title)]</label>
-									<label2>$INFO[Window(Home).Property(LatestMovie.4.Year),, •] $INFO[Window(Home).Property(LatestMovie.4.Runningtime),, mins]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestMovie.4.fanart)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestMovie.4.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentMovie.4.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentMovie.4.Title)]</label>
+									<label2>$INFO[Window(Home).Property(RecentMovie.4.Year),, •] $INFO[Window(Home).Property(RecentMovie.4.Runtime),, mins]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentMovie.4.art(fanart))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentMovie.1.Play)]</onclick>
 								</item>
 
 								<!--tv shows-->
 								<item id="10">
-									<visible>!isempty(Window(Home).Property(LatestEpisode.1.showTitle))</visible>
-									<label>$INFO[Window(Home).Property(LatestEpisode.1.showTitle)]</label>
-									<label2>$INFO[Window(Home).Property(LatestEpisode.1.EpisodeSeason),Season , •] $INFO[Window(Home).Property(LatestEpisode.1.EpisodeNumber),Episode ,]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestEpisode.1.thumb)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestEpisode.1.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentEpisode.1.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentEpisode.1.TVshowTitle)]</label>
+									<label2>$INFO[Window(Home).Property(RecentEpisode.1.Season),Season , •] $INFO[Window(Home).Property(RecentEpisode.1.Episode),Episode ,]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentEpisode.1.Art(thumb))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentEpisode.1.Play)]</onclick>
 								</item>
 								<item id="11">
-									<visible>!isempty(Window(Home).Property(LatestEpisode.2.showTitle))</visible>
-									<label>$INFO[Window(Home).Property(LatestEpisode.2.showTitle)]</label>
-									<label2>$INFO[Window(Home).Property(LatestEpisode.2.EpisodeSeason),Season , •] $INFO[Window(Home).Property(LatestEpisode.2.EpisodeNumber),Episode ,]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestEpisode.2.thumb)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestEpisode.2.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentEpisode.2.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentEpisode.2.TVshowTitle)]</label>
+									<label2>$INFO[Window(Home).Property(RecentEpisode.2.Season),Season , •] $INFO[Window(Home).Property(RecentEpisode.2.Episode),Episode ,]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentEpisode.2.Art(thumb))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentEpisode.2.Play)]</onclick>
 								</item>
 								<item id="12">
-									<visible>!isempty(Window(Home).Property(LatestEpisode.3.showTitle))</visible>
-									<label>$INFO[Window(Home).Property(LatestEpisode.3.showTitle)]</label>
-									<label2>$INFO[Window(Home).Property(LatestEpisode.3.EpisodeSeason),Season , •] $INFO[Window(Home).Property(LatestEpisode.3.EpisodeNumber),Episode ,]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestEpisode.3.thumb)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestEpisode.3.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentEpisode.3.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentEpisode.3.TVshowTitle)]</label>
+									<label2>$INFO[Window(Home).Property(RecentEpisode.3.Season),Season , •] $INFO[Window(Home).Property(RecentEpisode.3.Episode),Episode ,]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentEpisode.3.Art(thumb))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentEpisode.3.Play)]</onclick>
 								</item>
 								<item id="13">
-									<visible>!isempty(Window(Home).Property(LatestEpisode.4.showTitle))</visible>
-									<label>$INFO[Window(Home).Property(LatestEpisode.4.showTitle)]</label>
-									<label2>$INFO[Window(Home).Property(LatestEpisode.4.EpisodeSeason),Season , •] $INFO[Window(Home).Property(LatestEpisode.4.EpisodeNumber),Episode ,]</label2>
-									<thumb>$INFO[Window(Home).Property(LatestEpisode.4.thumb)]</thumb>
-									<onclick>PlayMedia($ESCINFO[Window(Home).Property(LatestEpisode.4.Path)])</onclick>
+									<visible>!isempty(Window(Home).Property(RecentEpisode.4.Title))</visible>
+									<label>$INFO[Window(Home).Property(RecentEpisode.4.TVshowTitle)]</label>
+									<label2>$INFO[Window(Home).Property(RecentEpisode.4.Season),Season , •] $INFO[Window(Home).Property(RecentEpisode.4.Episode),Episode ,]</label2>
+									<thumb>$INFO[Window(Home).Property(RecentEpisode.4.Art(thumb))]</thumb>
+									<onclick>$INFO[Window(Home).Property(RecentEpisode.4.Play)]</onclick>
 								</item>
+								
 
 							</content>
 
