@@ -192,146 +192,139 @@
 			</animation>
 
 			<control type="panel" id="13">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>20-col</width>
-				<height>12-row</height>
-				<onleft>34</onleft>
-				<onright>72</onright>
-				<onup>13</onup>
-				<ondown>13</ondown>
-			
-				<itemlayout height="1-row" width="20-col">
-				
+				<posx>-12</posx>
+				<posy>-12</posy>
+				<width>22-col</width>
+				<height>13-row</height>
+				<onleft>9000</onleft>
+				<preloaditems>2</preloaditems>
+
+				<animation type="windowopen">
+					<include>listSlideIn</include>
+				</animation>
+
+				<itemlayout width="387" height="362">
+
 					<control type="image">
 						<posx>0</posx>
-						<posy>2</posy>
-						<width>20-col</width>
-						<height>53</height>
+						<posy>0</posy>
+						<width>363</width>
+						<height>269</height>
+						<aspectratio>scale</aspectratio>
+						<texture fallback="colors/black.png" border="0">$INFO[Listitem.thumb]</texture>
+						<bordertexture border="0">-</bordertexture>
+						<colordiffuse>ffFFFFFF</colordiffuse>
+					</control>
+
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>363</width>
+						<height>269</height>
+						<texture>backgrounds/vignette.png</texture>
+						<colordiffuse>ffffffff</colordiffuse>
 						<aspectratio>stretch</aspectratio>
-						<texture border="24,0,24,0">UIControls/listitemNF.png</texture>
-						<bordersize>0</bordersize>
-						<colordiffuse>99FFFFFF</colordiffuse>
 					</control>
-					
-					<control type="label">
-						<posx>36</posx>
-						<posy>0</posy>
-						<width>8-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>selected</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Label]</label>
+
+					<control type="group">
+						<posx>0</posx>
+						<posy>272</posy>
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>363</width>
+							<height>64</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/black.png</texture>
+							<bordersize>0</bordersize>
+							<colordiffuse>77FFFFFF</colordiffuse>
+						</control>
+						
+						<control type="label">
+							<posx>12</posx>
+							<posy>-8</posy>
+							<width>252</width>
+							<font>itemTitleSmall</font>
+							<textcolor>selected</textcolor>
+							<label>$INFO[ListItem.Label]</label>
+						</control>
+
+						<control type="label">
+							<posx>12</posx>
+							<posy>18</posy>
+							<width>350</width>
+							<font>smallMedium</font>
+							<textcolor>selected</textcolor>
+							<shadowcolor>-</shadowcolor>
+							<label>$INFO[ListItem.ChannelName] • $INFO[ListItem.Date]</label>
+						</control>
 					</control>
-					
-					<control type="label">
-						<posx>9-col</posx>
-						<posy>0</posy>
-						<width>4-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>selected</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.ChannelName]</label>
-					</control>
-					
-					<control type="label">
-						<posx>13-col</posx>
-						<posy>0</posy>
-						<width>4-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>selected</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Date]</label>
-					</control>
-					
-					<control type="label">
-						<posx>17-col</posx>
-						<posy>0</posy>
-						<width>2-col</width>
-						<font>itemTitle</font>
-						<textcolor>selected</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Duration]</label>
-					</control>
-					
-					<control type="label">
-						<visible>!isempty(ListItem.playcount)</visible>
-						<posx>36r</posx>
-						<posy>1</posy>
-						<width>40</width>
-						<font>symbol</font>
-						<textcolor>selected</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label></label>
-					</control>
-				
+
 				</itemlayout>
-				
-				<focusedlayout height="1-row" width="20-col">
-					
+
+				<focusedlayout width="387" height="362">
+
 					<control type="image">
 						<posx>0</posx>
-						<posy>2</posy>
-						<width>20-col</width>
-						<height>53</height>
+						<posy>0</posy>
+						<width>363</width>
+						<height>269</height>
+						<aspectratio>scale</aspectratio>
+						<texture fallback="colors/black.png" border="0">$INFO[Listitem.thumb]</texture>
+						<colordiffuse>ffFFFFFF</colordiffuse>
+					</control>
+
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>363</width>
+						<height>269</height>
+						<texture>backgrounds/vignette.png</texture>
+						<colordiffuse>ffffffff</colordiffuse>
 						<aspectratio>stretch</aspectratio>
-						<texture border="24,0,24,0">UIControls/listitemFO.png</texture>
-						<bordersize>0</bordersize>
-						<colordiffuse>FFFFFFFF</colordiffuse>
+						<animation effect="fade" start="0" end="100" time="500" reversible="false">focus</animation>
 					</control>
-					
-					<control type="label">
-						<posx>36</posx>
-						<posy>0</posy>
-						<width>8-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>black</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Label]</label>
+
+					<control type="group">
+						<posx>0</posx>
+						<posy>272</posy>
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>363</width>
+							<height>64</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/selected.png</texture>
+							<bordersize>0</bordersize>
+							<colordiffuse>ffFFFFFF</colordiffuse>
+						</control>
+
+						<control type="label">
+							<posx>12</posx>
+							<posy>-8</posy>
+							<width>252</width>
+							<font>itemTitleSmall</font>
+							<textcolor>black</textcolor>
+							<shadowcolor>-</shadowcolor>
+							<label>$INFO[ListItem.Label]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+						<control type="label">
+							<posx>12</posx>
+							<posy>18</posy>
+							<width>350</width>
+							<font>smallMedium</font>
+							<shadowcolor>-</shadowcolor>
+							<textcolor>black</textcolor>
+							<label>$INFO[ListItem.ChannelName] • $INFO[ListItem.Date]</label>
+						</control>
 					</control>
-					
-					<control type="label">
-						<posx>9-col</posx>
-						<posy>0</posy>
-						<width>4-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>black</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.ChannelName]</label>
-					</control>
-					
-					<control type="label">
-						<posx>13-col</posx>
-						<posy>0</posy>
-						<width>4-col-gutter</width>
-						<font>itemTitle</font>
-						<textcolor>black</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Date]</label>
-					</control>
-					
-					<control type="label">
-						<posx>17-col</posx>
-						<posy>0</posy>
-						<width>2-col</width>
-						<font>itemTitle</font>
-						<textcolor>black</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label>$INFO[ListItem.Duration]</label>
-					</control>
-					
-					<control type="label">
-						<visible>!isempty(ListItem.playcount)</visible>
-						<posx>36r</posx>
-						<posy>1</posy>
-						<width>40</width>
-						<font>symbol</font>
-						<textcolor>black</textcolor>
-						<shadowcolor>-</shadowcolor>
-						<label></label>
-					</control>
-					
+
 				</focusedlayout>
+
 			</control>
 		
 		</control>
