@@ -2,6 +2,7 @@
 <addon id="skin.maximinimalism" version="0.7.0" name="Maximinimalism" provider-name="theDeadman">
 	<requires>
 		<import addon="xbmc.gui" version="4.0.0"/>
+		<import addon="service.skin.widgets" version="0.0.2"/>
 	</requires>
 	<extension point="xbmc.gui.skin" defaultthemename="textures.xbt" debugging="false">
 	    <res width="1920" height="1080" aspect="16:9" default="true" folder="1080i" />
